@@ -1,5 +1,3 @@
-^pfunc\.h$
-^hctype\.h$
 ^speed-test\d
 ^leak-test
 ^test
@@ -16,4 +14,3 @@ pm_to_blib$
 \.c$
 \.bs$
 \.tar\.gz$
-^t/pod-coverage.t$
