@@ -1,0 +1,30 @@
+on 'runtime' => sub {
+    requires 'strict';
+    requires 'vars';
+    requires 'Carp';
+    requires 'Exporter';
+    requires 'HTML::Tagset';
+    requires 'HTTP::Headers';
+    requires 'IO::File';
+    requires 'LWP::UserAgent';
+    requires 'URI';
+    requires 'URI::URL';
+    requires 'XSLoader';
+};
+
+on 'configure' => sub {
+    requires 'ExtUtils::MakeMaker' => '6.52';
+};
+
+on 'test' => sub {
+    requires 'strict';
+    requires 'vars';
+    requires 'Config';
+    requires 'FileHandle';
+    requires 'File::Spec';
+    requires 'IO::File';
+    requires 'SelectSaver';
+    requires 'Test';
+    requires 'Test::More';
+    requires 'URI';
+};
